   Bug #131 - Fixed - Crash when changing sort order on toolbar and then changing again in profile manager.
   Added two new preference items under the general tab
      1) Auto save tool bars (A 2014 Feature Request!)
      2) Number of recent files under the File menu (5 to 20)
   Save crosshair state (A 2014 Feature Request!)
   Save waveform state (A 2014 Feature Request!)
   Minor internal refactoring.

01 JAN 2014 - V 0.2.1.1
    Bug #123 - FIXED - J1Sys plugin crashes on context menu click (right-click)
    Bug #124 - FIXED - Text in channel mapper pop-up for saving prompt has \n\n
    Bug #125 - FIXED - Profile editing, some controls are not anchored properly.
    Bug #126 - FIXED - Channel Mapper not removing channels that were placed by mistake and then deleted.
    Bug #127 - FIXED - Paste full channel events doesn't work right if a group is selected.
    Bug #128 - FIXED - Selecting a large area and then moving the selection box might cause an exception.
    Bug #129 - FIXED - Sparkle not rendering correctly when you have percentage selected instead of value.
    Bug #130 - FIXED - Open .vix files with Vixen+ causes data directory to be "reset"
    Drag and Drop now supported for .VIX files
    Enhanced how changing the event period re-renders (e.g. go from 10ms to 50ms timing) so that if the original didn't have overlap, the new doesn't
       either OR if the original did, the new one attempts too as well.
    Hopefully fixed a memory leak when copy and pasting repeated times in various sequences.  Was not releasing redo/undo information when a sequence
       closed.
    Fixed more grammar errors in this file.

22 SEP 2013 - V 0.1.265.1  {BETA}
    Fixed grammar errors in release notes.  I'm a programmer, not a speller :D
    Fixed a channel count weirdness where the wrong count was shown when a group is selected.
    Added an extension method so that logging to crash.log can be called from any class.